--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:cli": "node --import tsx --test --experimental-test-isolation=none tests/integration/cli-e2e.test.ts",
     "test:integration": "run-s test:pg test:mysql test:mariadb test:sqlite test:mongodb test:redis",
     "test:all": "run-s test:unit test:integration",
+    "test:docker": "docker build -t spindb-e2e -f tests/docker/Dockerfile . && docker run --rm spindb-e2e",
     "format": "prettier --write .",
     "lint": "tsc --noEmit && eslint .",
     "prepare": "husky"
