refactor: extract client tool installation logic and add security validations
**CLI Changes:**
- Extract checkAndInstallClientTools() helper to eliminate duplicated client tool installation code across PostgreSQL, MySQL, MariaDB, MongoDB, and Redis
- Add SAFE_PACKAGE_PATTERN regex validation to prevent command injection in package names and tap names
- Add warning messages when skipping invalid package/tap names

**Helper Changes:**
- Extract calculateDirectorySize() helper to eliminate duplicated directory

--- a/tests/docker/Dockerfile
+++ b/tests/docker/Dockerfile
@@ -73,8 +73,9 @@ RUN apt-get update && apt-get install -y \
 RUN ln -sf /lib/aarch64-linux-gnu/libaio.so.1t64 /lib/aarch64-linux-gnu/libaio.so.1 2>/dev/null || \
     ln -sf /lib/x86_64-linux-gnu/libaio.so.1t64 /lib/x86_64-linux-gnu/libaio.so.1 2>/dev/null || true
 
-# Install pnpm
-RUN corepack enable && corepack prepare pnpm@latest --activate
+# Install pnpm (pinned for reproducible builds)
+ARG PNPM_VERSION=9.14.2
+RUN corepack enable && corepack prepare pnpm@${PNPM_VERSION} --activate
 
 # Create non-root user for running databases
 # PostgreSQL initdb refuses to run as root for security reasons
