--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -8,10 +8,15 @@ reviews:
   path_instructions:
     - path: '**/*'
       instructions: |
-        Windows is not currently supported. Please ignore any warnings or suggestions
-        related to Windows-specific issues including:
-        - Path separators (backslash vs forward slash)
-        - Line endings (CRLF vs LF)
-        - Windows-specific file path handling
-        - Windows shell compatibility
-        - Any cross-platform compatibility concerns related to Windows
+        Do not make comments about jsdoc style comments
+        Do not comment about using a structured logger
+        All 5 architectures are supported for all databases unless noted otherwise:
+        - darwin-arm64
+        - darwin-x64
+        - linux-arm64
+        - linux-x64
+        - win32-x64
+        hostdb should serve as the source of truth for supported versions
+        - https://raw.githubusercontent.com/robertjbass/hostdb/main/releases.json
+        - https://raw.githubusercontent.com/robertjbass/hostdb/main/databases.json
+        - https://raw.githubusercontent.com/robertjbass/hostdb/main/downloads.json
