refactor: improve security, error handling, and version parsing across engines
**CLI Changes:**
- Replace apt-get shell concatenation with execFileAsync for security (prevents command injection)
- Separate apt-get update and install into individual execFileAsync calls with argument arrays
- Consolidate engine filtering into single destructured array assignment in engine-handlers.ts

**Core Changes:**
- Add timeout support to spawnAsync() in binary-manager.ts and mariadb/binary-manager.ts
- Improve

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:redis": "node --import tsx --test --experimental-test-isolation=none tests/integration/redis.test.ts",
     "test:unit": "node --import tsx --test --experimental-test-isolation=none tests/unit/*.test.ts",
     "test:cli": "node --import tsx --test --experimental-test-isolation=none tests/integration/cli-e2e.test.ts",
+    "test:hostdb-sync": "node --import tsx --test --experimental-test-isolation=none tests/integration/hostdb-sync.test.ts",
     "test:integration": "run-s test:pg test:mysql test:mariadb test:sqlite test:mongodb test:redis",
     "test:all": "run-s test:unit test:integration",
     "test:local": "./scripts/test-local.sh",
