--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,32 @@ jobs:
         run: pnpm lint
 
   # ============================================
+  # hostdb Version Sync Check
+  # Verifies SpinDB version-maps match hostdb releases.json
+  # ============================================
+  hostdb-sync:
+    name: Verify hostdb Sync
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Verify version maps match hostdb
+        run: pnpm test:hostdb-sync
+
+  # ============================================
   # PostgreSQL Integration Tests
   # Uses SpinDB to download and manage PostgreSQL
   # ============================================
